google/benchmark/istio-grpc-load-balancer/camunda-zeebe-gateway-grpc.yml
apiVersion: v1
kind: Service
metadata:
  name: camunda-zeebe-gateway-grpc
  labels:
    istio.io/dataplane-mode: ambient
    istio.io/use-waypoint: waypoint
spec:
  type: ClusterIP
  selector:
    app: camunda-platform
    app.kubernetes.io/name: camunda-platform
    app.kubernetes.io/instance: camunda
    app.kubernetes.io/part-of: camunda-platform
    app.kubernetes.io/component: zeebe-gateway
  ports:
    - name: grpc
      port: 26500
      targetPort: 26500
      protocol: TCP
      appProtocol: kubernetes.io/h2c # HTTP/2 over cleartext (explicitly mentioned in Linderd docs and should work in Istio according to https://github.com/istio/istio/blob/4a3e1b75d2d1759a247ef0a65d289b2fc86d0418/pkg/config/kube/conversion.go#L63)
